# CaseMaster

./: .env.example  .gitignore  manage.py  pyproject.toml
.github/workflows/: django.yml
case_master/: settings.py
case_master/api_midleware/: __init__.py  pagination.py
case_master/users/: apis.py  apps.py  models.py  urls.py
case_master/users/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  env.py  urls.py  wsgi.py
config/django/: __init__.py  base.py  dev.py  prod.py  test.py
