[tool.poetry]
name = "casemaster"
version = "0.1.0"
description = ""
authors = ["zero <dukepandme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
pymysql = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
